@@ -1,3 +1,7 @@
+Sun Mar 17 16:11:39 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Remove remaining svn:keywords properties.
+
 Sat Dec  8 19:50:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
